--- a/nbs/verify-api-events-route.ipynb
+++ b/nbs/verify-api-events-route.ipynb
@@ -52,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "60e012ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:8002/api/events/a'"
+       "'http://localhost:8002/api/events/14'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "49b71446",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n",
+      "{'id': 14}\n"
      ]
     }
    ],
