post route and return schema update

--- a/nbs/verify-api-events-route.ipynb
+++ b/nbs/verify-api-events-route.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "22c6a562",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'http://localhost:8002/api/events'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0107647b",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "{'items': [1, 2, 3]}\n"
+      "{'items': [{'id': 1}, {'id': 2}, {'id': 3}], 'count': 3}\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "60e012ad",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "'http://localhost:8002/api/events/14'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "49b71446",
    "metadata": {},
    "outputs": [
@@ -89,6 +89,56 @@
    ],
    "source": [
     "response = requests.get(endpoint)\n",
+    "print(response.ok)\n",
+    "\n",
+    "if response.ok:\n",
+    "    data = response.json()\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a65d145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://localhost:8002/api/events'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "endpoint=f\"{base_url}{path}\"\n",
+    "endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b3523528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{'id': 123}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Post API testing\n",
+    "endpoint=f\"{base_url}{path}\"\n",
+    "endpoint\n",
+    "\n",
+    "response = requests.post(endpoint)\n",
     "print(response.ok)\n",
     "\n",
     "if response.ok:\n",
